mdapipkg/objects/GL_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AP_Reference__c</fullName>
        <label>AP Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounts_Payable__c</fullName>
        <label>Accounts Payable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chapter_Number__c</fullName>
        <label>Chapter Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Debit__c</fullName>
        <formula>IF(GL_Original_Detail__r.Id =&quot;&quot;, &quot;&quot;, IF(Amount__c &lt;0, &quot;Credit&quot;, &quot;Debit&quot;))</formula>
        <label>Credit/Debit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferral_Flag__c</fullName>
        <label>Deferral Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <label>Event Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <description>This is the field from which fiscal year, month, day, etc. can be derived.</description>
        <label>Fiscal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month_End__c</fullName>
        <formula>&quot;End &quot; &amp; CASE(MONTH(DATEVALUE(Fiscal_Date__c)), 1,&quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, 12, &quot;Dec&quot;,&quot;&quot;) &amp; &quot; - &quot; &amp; TEXT(YEAR(DATEVALUE(Fiscal_Date__c)))</formula>
        <label>Fiscal Month End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Number__c</fullName>
        <formula>GL_Account__r.Account_Number__c</formula>
        <label>GL Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Coding</label>
        <referenceTo>GL_Coding__c</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Batch__c</fullName>
        <label>GL Batch</label>
        <referenceTo>GL_Batch__c</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GL_Original_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This looks up to the original GL Detail record from which the subsequent deferral and reconciliation records are derived.</description>
        <inlineHelpText>Original GL Detail record - Not subsequent monthly reconciliations</inlineHelpText>
        <label>GL Original Detail</label>
        <referenceTo>GL_Detail__c</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Child_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to provide the account that will be credited each month during revenue recognition.</description>
        <label>GL Revenue Account</label>
        <referenceTo>GL_Coding__c</referenceTo>
        <relationshipLabel>GL Details (GL Revenue Account)</relationshipLabel>
        <relationshipName>GL_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Sub_Account_Number__c</fullName>
        <formula>GL_Account__r.GL_Sub_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Sub-Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IncUnapAr_Flag__c</fullName>
        <description>This field name stands for “INCome, UNAPplied, AR Flag”.
Accounts Receivable related records (These are from the Standard Batch Processing): 
I=Income (usually a credit) .  GL Account from Primary Account in product.
P=Payment (usually a debit for payment or credit for refund).  GL Account from Primary Account in product.
U=Unapplied (usually a credit opposite payment).  GL Account from AR Account in product.
T=Sales Tax (usually a credit).  GL Account from the Primary Account in the TAX Product.
R=A/R (usually a debit opposite Income and credit opposite payment).GL Account from AR Account in Product.
 
Accounts Payable related records (These are from either the Refund Process or Chapter Reimbursement Process):
P=Refund or Chapter Reimbursement (usually a debit). GL Account from Primary Account on Refund Product or Chapter Product.
X=Accounts Payable (usually a credit).  GL Account from the AP Account on either the Refund Product or Chapter Product.</description>
        <label>IncUnapAr Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number (Historical)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to KG Invoice Object</description>
        <label>Invoice</label>
        <referenceTo>KGRenewal__Invoice__c</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Changed to Lookup Relationship without it being required to populate in order to migrate legacy data. Once legacy data is migrated the Lookup to Opportunity will be made required.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>GL Details</relationshipLabel>
        <relationshipName>GL_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTaskID__c</fullName>
        <description>This is for historical purposes only and will not be used going forward.</description>
        <label>ProjectTaskID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognition_Periods_Left__c</fullName>
        <description>This is the number of periods that the monthly recognition has left to run on this revenue.</description>
        <label>Recognition Periods Left</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Status__c</fullName>
        <description>To let the process know which items are to be recognized each month.</description>
        <label>Revenue Recognition Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Periods_To_Recognize__c</fullName>
        <description>This is the total periods that we will recognize this revenue.  This will be used to calculate how much is recognized each period.</description>
        <label>Total Periods To Recognize</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>GL Detail</label>
    <listViews>
        <fullName>GL_Details</fullName>
        <columns>NAME</columns>
        <columns>Accounts_Payable__c</columns>
        <columns>Amount__c</columns>
        <columns>Deferral_Flag__c</columns>
        <columns>GL_Account_Number__c</columns>
        <columns>GL_Original_Detail__c</columns>
        <columns>GL_Revenue_Account__c</columns>
        <columns>Recognition_Periods_Left__c</columns>
        <columns>Revenue_Recognition_Status__c</columns>
        <columns>Total_Periods_To_Recognize__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>GL Details</label>
    </listViews>
    <nameField>
        <displayFormat>GLD-{0000}</displayFormat>
        <label>GL Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>